--- a/style.css
+++ b/style.css
@@ -293,9 +293,93 @@ span.product-timer-style {
 }
 
 
+/* footer */
 
 
 
+li.social-icon {
+    padding-right: 15px;
+}
+
+.navigation-logo {
+    padding-bottom: 30px;
+}
+
+.footer-description.dark2 {
+    padding-bottom: 30px;
+}
+
+.footer-social-media.dark4 {
+    padding-bottom: 30px;
+}
+
+.footer-description.dark2 span {
+    font-size: 20px;
+}
+
+.footer-list {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.footer-list-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-list-items {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-list-items ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.footer-social-media ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+span.footer-list-title-style {
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom:10px;
+}
+
+li.footer-list-item {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.footer-list-title.dark2 {
+    padding-bottom: 20px;
+}
+
+
+.footer-copyright.dark4.hide-mobile-part {
+    display: none;
+}
+
+.footer-copyright-style {
+    font-size:20px;
+}
+
+.footer-main .container {
+        display: flex;
+        flex-direction: column;
+    
+}
+
+.footer-title {
+    padding-bottom: 20px;
+}
 
 /* small tablet styles */
 @media screen and (min-width:620px) {
