--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ p.section-text-style {
 
 
 .call-to-action-page .background-color-fill {
-    background: linear-gradient(0.25turn, rgb(255 57 57 / 72%), rgb(255 57 118), rgb(255 143 57 / 79%));
+    background: linear-gradient(77deg, rgb(255, 57, 152) 0%, rgb(255, 57, 57) 31%, rgb(255, 129, 57) 79%, rgb(117 189 155) 100%);
     padding-top: 110px;
 }
 
@@ -326,15 +326,27 @@ span.product-timer-style {
     display: flex;
     width: 40%;
     align-items: flex-end;
+    overflow: hidden;
+    position: relative;
 }
 .right-side img {
     height: 90%;
+    position:absolute;
 }
 
-.footer-title .navigational-logo {
+.footer-title .navigation-logo {
     padding-bottom: 30px;
 }
 
+.hero-page {
+    padding-top: 50px;
+}
+
+.monster-top .monster-img {
+    height: 100%;
+    bottom: 40px;
+    left: -40px;
+}
 
 
 /* footer */
