--- a/style.css
+++ b/style.css
@@ -434,6 +434,11 @@ li.footer-list-item {
     padding-bottom: 20px;
 }
 
+
+.CTA-wrapper {
+    padding-right:36px;
+}
+
 /* small tablet styles */
 @media screen and (min-width:620px) {
 
