--- a/style.css
+++ b/style.css
@@ -69,135 +69,17 @@
     font-family: 'Inter', sans-serif;
 }
 
+ body {
+    max-width:1440px;
+    margin:auto;
+}
 
 .product-card-list {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    overflow: overlay;
+    overflow: hidden;
 }
-
-/* mobile styles */
-
-
-/* wrappers */
-
-
-
-.background-image-1 {
-    position:relative;
-}
-
-
-
-
-
-
-.container {
-    padding: 36px 0px 36px 36px;
-}
-
-.navigation-wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 36px;
-}
-
-.navigation-list {
-    display: none;
-}
-
-.launch-date.pink {
-    padding-bottom: 24px;
-}
-
-.page-title.dark1 {
-    padding-bottom: 24px;
-}
-
-.page-text.dark2 {
-    padding-bottom: 24px;
-}
-
-span.launch-date-style {
-    font-size: 16px;
-    font-weight: bold;
-}
-
-h1.page-title-style-h1 {
-    font-size: 48px;
-    font-weight: 900;
-    font-family: 'Inter', sans-serif;
-}
-
-p.page-text-style {
-    font-size: 20px;
-}
-
-a.main-button-style {
-    font-size: 20px;
-    color: black;
-    font-weight: bold;
-}
-
-.main-button {
-    border: 3px solid ;
-    border-radius: 40px;
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-}
-
-span.section-title-style {
-    font-size: 40px;
-    font-weight: 500;
-}
-
-p.section-text-style {
-    font-size: 20px;
-}
-
-.section-title.dark1 {
-    padding-bottom: 16px;
-}
-
-
-.call-to-action-page .background-color-fill {
-    background: linear-gradient(77deg, rgb(255, 57, 152) 0%, rgb(255, 57, 57) 31%, rgb(255, 129, 57) 79%, rgb(117 189 155) 100%);
-    padding-top: 110px;
-}
-
-
-.partner-list-wrapper ul {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-}
-
-
-
-span.partner-name-big {
-    font-size: 36px;
-}
-
-span.partner-name-small {
-    font-size:30px;
-}
-
-.partner-name {
-    margin:auto;
-}
-
-
-li.partner {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
 
 .partner.hide-mobile-part {
     display: none;
@@ -211,40 +93,17 @@ span.via-link {
     text-decoration: underline;
 }
 
-.CTA-wrapper.background-color-fill {
-    display: flex;
-    padding-top: 75px;
-    flex-direction: column;
-}
 
-.partner-list-page .container {
-    padding-top: 72px;
-    padding-right: 30px;
-}
+/* mobile styles */
 
-.hero-page .container {
-    padding-bottom:72px;
-}
 
-.product-card-list {
+/* wrappers */
+
+.navigation-wrap {
     display: flex;
     justify-content: space-between;
-}
-
-.product-card {
-    padding-top: 36px;
-    padding-right: 30px;
-}
-
-.product-card-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-}
-
-.product-card {
-    padding-top: 36px;
-    padding-right: 30px;
+    align-items: center;
+    padding-right: 36px;
 }
 
 .product-description-wrap {
@@ -256,48 +115,33 @@ span.via-link {
     align-items: flex-start;
 }
 
-
-img {
-    display: block;
-}
-
-.product-series-padding {
-    padding:5px 0px;
-}
-
-.product-description-name {
-    padding: 10px 0px;
-}
-
-.product-description-cost {
-    padding: 10px 0px;
-}
-
-span.product-series-style {font-size: 12px;}
-
-.product-name.dark1.product-series-padding {
-    font-size: 20px;
-}
-
-span.prduct-bid-style {
-    font-size: 12px;
-}
-
-span.product-cost-style {
-    font-size: 20px;
-}
-
-span.product-timer-style {
-    font-size: 18px;
-}
-
-
 .hero-page-wrapper {
     display: flex;
 }
 
-.hero-content {
-    width: 70%;
+.footer-list-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+.CTA-wrapper {
+    padding-right:36px;
+}
+
+
+
+/* images */
+.background-image-1 {
+    position:relative;
+}
+
+.monster-top .monster-img {
+    height: 70%;
+    z-index: 10;
+}
+
+img {
+    display: block;
 }
 
 .hero-image {
@@ -307,67 +151,73 @@ span.product-timer-style {
     top: -45px;
 }
 
-.hero-image-content {
-    position: absolute;
-    height:100%;
-    object-fit: contain;
+
+.call-to-action-page .background-color-fill {
+    background: linear-gradient(77deg, rgb(255, 57, 152) 0%, rgb(255, 57, 57) 31%, rgb(255, 129, 57) 79%, rgb(117 189 155) 100%);
+    padding-top: 110px;
 }
 
+/* containers */
 
-.hero-page-wrapper .main-button {
-    width: 100%;
+.container {
+    padding: 36px 0px 36px 36px;
 }
 
-.left-side {
-    width:60%;
+.partner-list-page .container {
+    padding-top: 72px;
+    padding-right: 30px;
+}
+
+.hero-page .container {
+    padding-bottom:72px;
+}
+
+.footer-main .container {
+    display: flex;
+    flex-direction: column;
+}
+
+.top .left-side {
+    width: 70%;
+    display: flex;
+    row-gap: 30px;
+    flex-direction: column;
+}
+
+.hero-content {
+    width: 70%;
 }
 
 .right-side {
     display: flex;
-    width: 40%;
-    align-items: flex-end;
+    width: 30%;
     overflow: hidden;
     position: relative;
 }
-.right-side img {
-    height: 90%;
-    position:absolute;
+
+/* lists */
+
+.navigation-list {
+    display: none;
 }
 
-.footer-title .navigation-logo {
-    padding-bottom: 30px;
+.partner-list-wrapper ul {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    justify-items: center;
 }
 
-.hero-page {
-    padding-top: 50px;
+.product-card-list {
+    display: flex;
+    justify-content: space-between;
 }
 
-.monster-top .monster-img {
-    height: 100%;
-    bottom: 40px;
-    left: -40px;
-}
-
-
-/* footer */
-
-
-
-li.social-icon {
-    padding-right: 15px;
-}
-
-
-.footer-description.dark2 {
-    padding-bottom: 30px;
-}
-
-.footer-social-media.dark4 {
-    padding-bottom: 30px;
-}
-
-.footer-description.dark2 span {
-    font-size: 20px;
+.product-card-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 }
 
 .footer-list {
@@ -375,11 +225,6 @@ li.social-icon {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-}
-
-.footer-list-wrap {
-    display: flex;
-    flex-direction: column;
 }
 
 .footer-list-items {
@@ -399,11 +244,10 @@ li.social-icon {
     align-items: center;
 }
 
-
-span.footer-list-title-style {
-    font-size: 16px;
-    font-weight: bold;
-    padding-bottom:10px;
+li.partner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 li.footer-list-item {
@@ -411,51 +255,290 @@ li.footer-list-item {
     padding-bottom: 10px;
 }
 
+li.social-icon {
+    padding-right: 15px;
+}
+
+/* paddings-margins */
+
+.CTA-wrapper.background-color-fill {
+    display: flex;
+    padding-top: 75px;
+    flex-direction: column;
+}
+
+.product-card {
+    padding-top: 36px;
+    padding-right: 30px;
+}
+
+.product-series-padding {
+    padding:5px 0px;
+}
+
+.product-description-name {
+    padding: 10px 0px;
+}
+
+.product-description-cost {
+    padding: 10px 0px;
+}
+
+.partner-name {
+    margin:auto;
+}
+
+.footer-title .navigation-logo {
+    padding-bottom: 30px;
+}
+
+.hero-page {
+    padding-top: 50px;
+}
+
+.footer-description.dark2 {
+    padding-bottom: 30px;
+}
+
+.footer-social-media.dark4 {
+    padding-bottom: 30px;
+}
+
 .footer-list-title.dark2 {
     padding-bottom: 20px;
-}
-
-
-.footer-copyright.dark4.hide-mobile-part {
-    display: none;
-}
-
-.footer-copyright-style {
-    font-size:20px;
-}
-
-.footer-main .container {
-        display: flex;
-        flex-direction: column;
-    
 }
 
 .footer-title {
     padding-bottom: 20px;
 }
 
+/* buttons */
 
-.CTA-wrapper {
-    padding-right:36px;
+.hero-page-wrapper .main-button {
+    height: 75px;
+    width: 188px;
 }
+
+.main-button {
+    border: 3px solid ;
+    border-radius: 40px;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+a.main-button-style {
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+}
+
+/* fonts  */
+
+.footer-description.dark2 span {
+    font-size: 20px;
+}
+
+.footer-copyright-style {
+    font-size:20px;
+}
+
+span.partner-name-big {
+    font-size: 36px;
+}
+
+span.partner-name-small {
+    font-size:30px;
+}
+
+span.product-series-style {
+    font-size: 12px;
+}
+
+.product-name.dark1.product-series-padding {
+    font-size: 20px;
+}
+
+span.prduct-bid-style {
+    font-size: 12px;
+}
+
+span.product-cost-style {
+    font-size: 20px;
+}
+
+span.product-timer-style {
+    font-size: 18px;
+}
+
+span.launch-date-style {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+h1.page-title-style-h1 {
+    font-size: 48px;
+    font-weight: 900;
+    font-family: 'Inter', sans-serif;
+}
+
+p.page-text-style {
+    font-size: 20px;
+}
+
+span.section-title-style {
+    font-size: 40px;
+    font-weight: 500;
+}
+
+p.section-text-style {
+    font-size: 20px;
+}
+
+span.footer-list-title-style {
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom:10px;
+}
+
+
+.partner-name {
+    margin-left: 15px;
+}
+
+.navigation-list a {
+    text-decoration: none;
+}
+
+.footer-copyright.dark4.hide-mobile-part {
+    display: none;
+}
+
+
+@media screen and (min-width:495px) {
+    h1.page-title-style-h1 {
+        font-size: 55px;
+    }
+
+
+}
+
 
 /* small tablet styles */
-@media screen and (min-width:620px) {
+@media screen and (min-width:615px) {
+    h1.page-title-style-h1 {
+        font-size:70px;
+    }
 
+    .right-side {
+        width:30%;
+    }
+    .left-side {
+        width:70%;
+    }
+
+    .monster-top .monster-img {
+        height:80%;
+    }
+
+    .footer-list {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
+
+@media screen and (min-width:800px) {
+
+    .partner-list-wrapper ul {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .footer-list {
+        display: flex;
+        padding-left:60px;
+        gap:50px;
+    }
+    
+    .footer-main .container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+}
 
 
 /* large tables & laptop styles */
 @media screen and (min-width:960px) {
 
+    .monster-top .monster-img {
+        height:100%;
+    }
+
+    h1.page-title-style-h1 {
+        font-size: 90px;
+    }
+
+    .navigation-list{
+        display: inline-block;
+    }
+
+    .navigation-list ul {
+        display: flex;
+        gap:50px;
+
+    }
+
+    .navigation-burger {
+        display: none;
+    }
+        
+    .call-to-action-page .container {
+        padding: 36px 0px 36px 36px;
+        padding-top: 110px;
+    }
+
+    .hero-page-top .container {
+        padding: 100px 0px 150px 36px;
+    }
+
+    .partner-list-page .container {
+        padding: 100px 36px 100px 36px;
+    }
+    
 }
 
 
 
 /* desktop styles */
 @media screen and (min-width:1200px) {
+    .footer-list {
+        gap:100px;
+    }
+
+    .top .left-side {
+        width: 50%;
+        display: flex;
+        row-gap: 30px;
+        flex-direction: column;
+    }
+
+    .right-side {
+        width: 40%;
+        justify-content: flex-end
+    }
+
+    .call-to-action-page .background-color-fill {
+        border-radius: 20px;
+    }
+
+    .partner.hide-mobile-part {
+        display:flex;
+        font-size:36px;
+    }
+
 
 }
-
-test
