--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,29 @@
 .dark1 {
     color:black;
 }
+$dark_1:black;
+$dark_2:rgba(85, 85, 85, 1);
+$dark_3:rgba(119, 119, 119, 1);
+$dark_4:rgba(153, 153, 153, 1);
+
+$light_1:rgba(255, 255, 255, 1);
+$light_2:rgba(238, 238, 238, 1);
+$light_3:rgba(204, 204, 204, 1);
+
+$color-orange:rgba(255, 129, 57, 1);
+$color-pink:rgba(255, 57, 152, 1);
+$color-green:rgba(57, 255, 160, 1);
+$color-red:rgba(255, 57, 57, 1);
+
+$light-color-orange:rgba(255, 240, 232, 1);
+$light-color-green:rgba(237, 255, 246, 1);
+
+$padding-bottom-s:padding-bottom:10px;
+$padding-bottom-m:padding-bottom:20px;
+$padding-bottom-l:padding-bottom:30px;
+
+
+
 
 .dark2 {
     color:rgba(85, 85, 85, 1);
@@ -165,7 +188,7 @@ img {
 
 
 .call-to-action-page  {
-    
+
     .background-color-fill {
     background: linear-gradient(77deg, rgb(255, 57, 152) 0%, rgb(255, 57, 57) 31%, rgb(255, 129, 57) 79%, rgb(117 189 155) 100%);
     padding-top: 110px;
@@ -306,6 +329,10 @@ li.social-icon {
     padding:5px 0px;
 }
 
+.product-name.dark1.product-series-padding {
+    font-size: 20px;
+}
+
 .product-description-name {
     padding: 10px 0px;
 }
@@ -318,30 +345,38 @@ li.social-icon {
     margin:auto;
 }
 
+
+
+
+
 .footer-title {
     padding-bottom: 20px;
 
     .navigation-logo {
     padding-bottom: 30px; 
 }
-
-}
-
-.hero-page {
-    padding-top: 50px;
-}
-
-.footer-description.dark2 {
+    .footer-description.dark2 {
     padding-bottom: 30px;
 }
-
-.footer-social-media.dark4 {
+    .footer-social-media.dark4 {
     padding-bottom: 30px;
+}
 }
 
 .footer-list-title.dark2 {
     padding-bottom: 20px;
 }
+
+
+.hero-page {
+    padding-top: 50px;
+}
+
+
+
+
+
+
 
 
 /* buttons */
@@ -388,9 +423,7 @@ span.product-series-style {
     font-size: 12px;
 }
 
-.product-name.dark1.product-series-padding {
-    font-size: 20px;
-}
+
 
 span.prduct-bid-style {
     font-size: 12px;
