--- a/scss/variables/_fonts.scss
+++ b/scss/variables/_fonts.scss
@@ -3,4 +3,6 @@ $font-s: 16px;
 $font-m: 20px;
 $font-l: 36px;
 $font-xl: 40px;
-$font-xxl: 90px;
+$font-xxl:60px;
+$font-xyl:75px;
+$font-xxxl: 90px;
