--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 @use './scss/variables/resets';
 @use './scss/elements/span';
 @use './scss/variables/fonts';
+@use './scss/breakpoints';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
 
 .product-card-list {
@@ -99,11 +100,6 @@ span.footer-list-title-style {
         padding-bottom: spacing.$padding-l; 
     }
 }
-
-
-
-
-
 
 .product-description-wrap {
     background-color:rgba(238, 238, 238, 1);
@@ -411,17 +407,17 @@ p.section-text-style {
 }
 
 
-@media screen and (min-width:495px) {
+
+@include breakpoints.xxs-size {
+// @media screen and (min-width:495px) {
     h1.page-title-style-h1 {
         font-size: 55px;
     }
-
-
 }
 
 
-/* small tablet styles */
-@media screen and (min-width:615px) {
+@include breakpoints.xs-size {
+// @media screen and (min-width:615px) {
     h1.page-title-style-h1 {
         font-size: fonts.$font-xxl;
     }
@@ -443,8 +439,8 @@ p.section-text-style {
     }
 }
 
-
-@media screen and (min-width:800px) {
+@include breakpoints.s-size {
+// @media screen and (min-width:800px) {
 
     .partner-list-wrapper {
         ul {
@@ -464,78 +460,71 @@ p.section-text-style {
         flex-direction: row;
         justify-content: space-between;
     }
-
 }
 
-
-/* large tables & laptop styles */
-@media screen and (min-width:960px) {
+    @include breakpoints.m-size {
 
     .monster-top .monster-img {
-        height:100%;
+        height: 100%;
+        overflow: hidden;
     }
-
     h1.page-title-style-h1 {
         font-size: fonts.$font-xxl;
     }
-
     .container .navigation-wrap .navigation-list{
         display: inline-block;
     }
-
     .navigation-list ul {
         display: flex;
         gap:50px;
-
     }
-
-    .navigation-burger {
-        display: none;
+    .hero-page-wrapper {
+        display: flex;
+        justify-content: space-between;
     }
-        
-    .call-to-action-page .container {
-        padding: spacing.$padding-xl 0px spacing.$padding-xl spacing.$padding-xl;
-        padding-top: 110px;
-    }
-
-    .hero-page-top .container {
-        padding: 100px 0px 150px spacing.$padding-xl;
-    }
-
-    .partner-list-page .container {
-        padding: 100px spacing.$padding-xl 100px spacing.$padding-xl;
-    }
-    
-}
-
-
-
-/* desktop styles */
-@media screen and (min-width:1200px) {
-    .footer-list {
-        gap:100px;
-    }
-
     .top .left-side {
         width: 50%;
         display: flex;
         row-gap: 30px;
         flex-direction: column;
     }
-
-    .right-side {
-        width: 40%;
-        justify-content: flex-end
+    .navigation-burger {
+        display: none;
     }
-
-    .call-to-action-page .background-color-fill {
-        border-radius: 20px;
+    .call-to-action-page .container {
+        padding: spacing.$padding-xl 0px spacing.$padding-xl spacing.$padding-xl;
+        padding-top: 110px;
     }
-
+    .hero-page-top .container {
+        padding: 100px 0px 150px spacing.$padding-xl;
+    }
+    .partner-list-page .container {
+        padding: 100px spacing.$padding-xl 100px spacing.$padding-xl;
+    }
     .partner.hide-mobile-part {
         display:flex;
         font-size: fonts.$font-l;
     }
+}
 
+
+@include breakpoints.l-size {
+    
+        .footer-list {
+            gap:100px;
+        }
+        .top .left-side {
+            width: 50%;
+            display: flex;
+            row-gap: 30px;
+            flex-direction: column;
+        }
+        .right-side {
+            width: 40%;
+            justify-content: flex-end;
+        }
+        .call-to-action-page .background-color-fill {
+            border-radius: 20px;
+        }
 
 }
